fixed margin bottom not showing for the last member card for when it wraps

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1184,13 +1184,12 @@ body {
 
 .member {
   flex: 0 0 22.5%;
+  margin-bottom: 3rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 2rem 1.5rem 1rem 1.5rem;
   border: 1px dotted var(--color-primary); }
-  .member:not(:last-child) {
-    margin-bottom: 3rem; }
   .member__image-container {
     border-bottom: 2px solid var(--color-grey-dark-5);
     border-top: 2px solid var(--color-grey-dark-5);
@@ -1579,10 +1578,16 @@ body {
   align-items: center;
   gap: 10rem;
   padding: 5rem;
-  border-bottom: 2px solid var(--color-grey-dark-5);
-  border-top: 2px solid var(--color-grey-dark-5);
+  border-bottom: 2px solid var(--color-grey-dark-4);
+  border-top: 2px solid var(--color-grey-dark-4);
   border-radius: 25px;
-  background-image: linear-gradient(180deg, #131313 0%, rgba(8, 8, 8, 0.501838) 50%, #131313 100%); }
+  /*   background-image: linear-gradient(
+    180deg,
+    rgb(19, 19, 19) 0%,
+    rgba(8, 8, 8, 0.5018382352941176) 50%,
+    rgb(19, 19, 19) 100%
+  ); */
+  background-color: #131313; }
   .contact-banner__info-container {
     display: flex;
     flex-direction: column; }
