--- a/src/sass/pages/_contact.scss
+++ b/src/sass/pages/_contact.scss
@@ -12,15 +12,16 @@
   gap: 10rem;
 
   padding: 5rem;
-  border-bottom: 2px solid var(--color-grey-dark-5);
-  border-top: 2px solid var(--color-grey-dark-5);
+  border-bottom: 2px solid var(--color-grey-dark-4);
+  border-top: 2px solid var(--color-grey-dark-4);
   border-radius: 25px;
-  background-image: linear-gradient(
+  /*   background-image: linear-gradient(
     180deg,
     rgb(19, 19, 19) 0%,
     rgba(8, 8, 8, 0.5018382352941176) 50%,
     rgb(19, 19, 19) 100%
-  );
+  ); */
+  background-color: rgb(19, 19, 19);
 
   // Container for the contact info and the google maps widget
   &__info-container {
